--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-dom": "^16.12.0",
     "react-error-boundary": "^1.2.5",
     "react-icons": "^3.8.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "redux": "^4.0.5",
     "styled-components": "^5.0.0"
   },
   "scripts": {
