--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.0.0"
   },
   "scripts": {
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "husky": "^4.0.10",
-    "lint-staged": "^9.5.0"
+    "lint-staged": "^9.5.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
