--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^3.26.7",
     "axios": "^0.19.2",
+    "connected-react-router": "^6.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-error-boundary": "^1.2.5",
